<resources>
    <string name="app_name">ATM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">"Content:  Retrofit,Glide,RxJava"</string>


    <!-- <string name="app_name">m-ProTecht</string>-->
    <string name="title_user_info">User info</string>
    <string name="title_site_list">Site list</string>
    <string name="title_site_map">Site map</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_trouble_ticket">Trouble ticket</string>
    <string name="title_trouble_ticket_Detail">Trouble ticket detail</string>
    <string name="title_Respond_to_trouble_ticket">Respond to trouble ticket</string>
    <string name="title_Reort_To_NOC">Reort To NOC</string>

    <string name="title_settings">Settings</string>
    <string name="title_logout">Log out</string>
    <string name="title_about">About</string>
    <!-- <string name="action_example">Example action</string> -->
    <!-- <string name="action_settings">Settings</string> -->


    <!-- content descriptions -->
    <string name="description_fav_button">Favorite button</string>
    <string name="navigation_subheader">Subheader</string>
    <string name="tab_info">Info</string>
    <string name="tab_alarm">Alarm</string>
    <string name="tab_control">Control</string>
    <string name="tab_live">Live view</string>
    <string name="tab_image">Image</string>
    <string name="tab_measurement">Measurement</string>
    <string name="tab_report">Report to NOC</string>
    <string name="title_activity_energy_trend">Energy Trend</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AChartEngineTimeSeries</string>
    <string name="str_title">Mains Energy(daily)</string>
    <string name="err_connection_timeout">Connection timeout. Please check the network status.</string>
    <string name="site_map_title">Pinch to zoom and swipe to navigate</string>
    <string name="site_map_wrold">Clik on the marker for more detailed information about the site</string>

    <!-- search fragment -->
    <string name="des">des</string>
    <string name="hint_search"> Site name</string>
    <string name="hint_save_filter">Please enter a bookmark name</string>
    <string name="Filters"> Filters</string>
    <string name="Save"> Save</string>
    <string name="SaveFilters"> Saved filters</string>
    <string name="Query"> Query</string>
    <string name="Query_title"> Filtered list</string>
    <string name="searchTitle"> Search</string>
    <string name="delete">delete</string>
    <string name="tag_pos">position</string>
    <string name="Product">Product</string>
    <string name="Circle">Circle</string>
    <string name="Cluster">Cluster</string>
    <string name="Product_Promot">Please select a product</string>
    <string name="Circle_Promot">Please select a circle</string>
    <string name="Cluster_Promot">Please select a cluster</string>

    <!-- Control fragment -->
    <string name="Device_Control">Device control</string>
    <string name="NO_Data_Found"> No data found!</string>
    <string name="SITE_DOWN">Sorry,This site has not been communicating with NOC for a while.Hence we are not able to provide the control functions,Please try again later.</string>

    <!-- Notifiaction Activity -->
    <string name="New_Trouble">New trouble tickets received</string>


    <!--trouble fragment  -->
    <string name="troubleticketID">Trouble ticket ID :</string>
    <string name="siteID">Site ID :</string>
    <string name="siteName">Site Name :</string>
    <string name="siteAddress">Site Address :</string>
    <string name="troubleticketdetail">Trouble ticket detail :</string>
    <!--dialog activity -->
    <string name="close">Close</string>
    <string name="view">View</string>

    <!-- gcm google -->
    <string name="gcm_id">790953853253</string>
	<string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <string name="generic_server_down">Server down</string>
    <string name="generic_server_timeout">Network access timeout</string>
    <string name="generic_error">Generic error</string>
    <string name="no_internet">No internet connection</string>
    <string name="name">Name</string>
    <string name="change_password">Change Password</string>
</resources>
