<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:tag="SEARCH" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f2f2f2"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/ed_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/ic_searchview"
                android:hint="@string/hint_search"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/bt_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/ed_search"
                android:layout_alignRight="@+id/ed_search"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/ic_search_black_36dp"
                android:contentDescription="@string/des" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/Filters"
                android:textColor="@color/blue_delta"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e1e1e1" />
            <!-- Product -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="7" >

                <TextView
                    android:id="@+id/tv_productPromot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/Product"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_product"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:drawableEnd="@drawable/ic_triangle"
                    android:drawableRight="@drawable/ic_triangle"
                    android:gravity="center"
                    android:text="@string/Product_Promot" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <!-- circle -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:weightSum="7" >

                <TextView
                    android:id="@+id/tv_circlePromot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/Circle"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_circle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:drawableEnd="@drawable/ic_triangle"
                    android:drawableRight="@drawable/ic_triangle"
                    android:gravity="center"
                    android:text="@string/Circle_Promot" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <!-- cluster -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:weightSum="7" >

                <TextView
                    android:id="@+id/tv_clusterPromot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/Cluster"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_cluster"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:drawableEnd="@drawable/ic_triangle"
                    android:drawableRight="@drawable/ic_triangle"
                    android:gravity="center"
                    android:text="@string/Cluster_Promot" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="9" >

                <Button
                    android:id="@+id/bt_save"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="4"
                    android:background="@drawable/btn_selector"
                    android:gravity="center"
                    android:text="@string/Save"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/bt_query"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="4"
                    android:background="@drawable/btn_selector"
                    android:gravity="center"
                    android:text="@string/Query"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/list_item_icon_margin_left"
                android:layout_marginRight="@dimen/list_item_icon_margin_left"
                android:gravity="center_vertical"
                android:text="@string/SaveFilters"
                android:textColor="@color/blue_delta"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e1e1e1" />

            <ListView
                android:id="@+id/lv_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="@dimen/list_item_icon_margin_left"
                android:layout_marginRight="@dimen/list_item_icon_margin_left"
                android:layout_marginTop="5dp" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>