<?xml version="1.0" encoding="utf-8"?>

    
    <LinearLayout 
            xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical" >

            <!-- trouble ticket id -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/troubleticketID"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_trobuleTicketID"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="3dfs"
                    android:textColor="#666666"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e0e0e0" />

            <LinearLayout
                android:id="@+id/siteInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!-- siteId -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/siteID"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_siteId"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:textColor="#666666"
                        android:textSize="12sp" />

                    <!-- siteName -->
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e0e0e0"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/siteName"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_siteName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:textColor="#666666"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e0e0e0" />

            <!-- site Address -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/layout_address"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="match_parent"
                   
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:text="@string/siteAddress"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_siteAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#666666"
                        android:textSize="12sp" />
                </LinearLayout>
                
				<LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical" >
                   
				    <ImageButton
                    android:id="@+id/ibt_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:src="@mipmap/ic_map_black_48dp" />
                </LinearLayout>
               
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e0e0e0" />

            <!-- trouble ticket detail -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/troubleTicketDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/troubleticketdetail"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txt_troubleTicketDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#666666"
					android:focusable="false"
					android:editable="false"
                    android:background="@null"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:id="@+id/fl_pencil"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="bottom|end"-->
           <!--android:layout_marginBottom="16dp"-->
            <!--android:layout_marginRight="16dp"-->
            <!--android:alpha="0.9"-->
            <!--android:src="@mipmap/ic_pencil" >-->
        <!--</android.support.design.widget.FloatingActionButton>-->
    </FrameLayout>
	<!---->
 <!---->
</LinearLayout>
    

